Configurable mqtt stuff

--- a/motion.conf
+++ b/motion.conf
@@ -109,12 +109,10 @@ netcam_use_tcp on
 ############################################################
 
 # Image width in pixels.
-# width 1280
-width 640
+; width 640
 
 # Image height in pixels.
-# height 720
-height 480
+; height 480
 
 # Maximum number of frames to be captured per second.
 framerate 5
@@ -209,10 +207,10 @@ post_capture 0
 ############################################################
 
 # Command to be executed when an event starts.
-on_event_start /usr/bin/mosquitto_pub -t moss/0/motion -m on -h mqtt
+; on_event_start value
 
 # Command to be executed when an event ends.
-on_event_end /usr/bin/mosquitto_pub -t moss/0/motion -m off -h mqtt
+; on_event_end value
 
 # Command to be executed when a picture is saved.
 ; on_picture_save value
@@ -231,11 +229,9 @@ on_event_end /usr/bin/mosquitto_pub -t moss/0/motion -m off -h mqtt
 
 # Command to be executed when a camera can't be opened or if it is lost
 ; on_camera_lost value
-on_camera_found /usr/bin/mosquitto_pub -t moss/0/available off
 
 # Command to be executed when a camera that was lost has been found.
 ; on_camera_found value
-on_camera_found /usr/bin/mosquitto_pub -t moss/0/available on
 
 ############################################################
 # Picture output configuration parameters
